--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,20 @@
     
     <canvas id="drawing"></canvas>
 
+    <div class="colors">
+        <div class="color black"></div>
+        <div class="color red"></div>
+        <div class="color green"></div>
+        <div class="color blue"></div>
+        <div class="color yellow"></div>
+        <div class="color white"></div>
+
+        <div class="pincel pincel1"></div>
+        <div class="pincel pincel2"></div>
+
+    </div>
+
+
+
 </body>
 </html>
